# heat-resource-salt

./: README.rst  setup.cfg  setup.py
debian/: changelog  control  copyright  rules
heat_salt/resources/: salt.py  salt_auth.py  salt_key.py  salt_metadata.py  salt_minion.py  salt_pipeline.py
heat_salt/template/: salt_key.hot  salt_meta.hot  salt_pipeline.hot
