[metadata]
name = python-heat-salt
summary = SaltStack Heat Resources
description-file =
    README.rst
author = Ales Komarek
author-email = ales.komarek@tcpcloud.eu
home-page = http://docs.openstack.org/developer/horizon/
classifier =
    Development Status :: 1 - Alpha
    Environment :: OpenStack
    Framework :: Python
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    heat_salt
